# piFartBox

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
apps/runtime/: CMakeLists.txt
apps/runtime-probe/: CMakeLists.txt
apps/runtime-probe/src/: main.cpp
cmake/toolchains/: armv6-rpi1-linux-gnueabihf.cmake
content/: README.md
control-api/: CMakeLists.txt  README.md
control-api/include/pi_fartbox/control/: control_server.hpp
control-api/src/: control_server.cpp
controller-mapper/: CMakeLists.txt  README.md
controller-mapper/include/pi_fartbox/controller/: controller_core.hpp  slmkiii_mapper.hpp
controller-mapper/src/: controller_core.cpp  slmkiii_mapper.cpp
deploy/nginx/: pifartbox.conf
deploy/systemd/: pifartbox-runtime.service
docs/: audio-runtime-research.md  completedTasks.md  controller-implementation-guidelines.md  cross-compile-and-deploy.md  device-architecture.md  on-device-build-and-deploy.md  platform-provisioning.md  provisioning-usage.md  reference-docs.md  runtime-entrypoint.md  runtime-foundation.md  slmkiii-sysex-communication.md  synth-controller-foundation.md  target-bootstrap.md  target-compatibility-decision.md  todo.md  updater-system.md  wsl-cross-build-host.md
docs/plans/: TASK-0000-repo-bootstrap-and-governance.md  TASK-0001-zynthian-engine-foundation.md  TASK-0002-engine-schema-and-session-model.md  TASK-0003-reference-docs-and-slmkiii-sysex-notes.md  TASK-0004-usb-update-system.md  TASK-0005-remote-pi-target-bootstrap.md  TASK-0006-target-toolchain-compatibility.md  TASK-0007-cross-compile-and-deploy-baseline.md  TASK-0008-wsl-cross-build-host-provisioning.md  TASK-0009-runtime-artifact-deployment-validation.md  TASK-0010-target-sysroot-cross-build-compatibility.md  TASK-0011-raspberry-pi-os-provisioning-baseline.md  TASK-0012-runtime-entrypoint-scaffold.md  TASK-0013-synth-and-controller-foundation.md  TASK-0014-provisioning-feedback-and-control.md  TASK-0015-native-on-device-build-pipeline.md  TASK-0016-pi-hosted-web-ui-and-audio-probe.md  TASK-0017-low-level-audio-runtime-research.md  TASK-0018-alsa-runtime-foundation.md  TASK-0019-subtractive-render-and-incontrol-pages.md  TASK-0020-pico-reference-controller-guidelines.md
docs/softwareDocs/: slmkiii-programmers-guide-extracted.md
engine/: CMakeLists.txt  README.md
engine/src/: device_registry.cpp  device_schema.cpp  engine_runtime.cpp
integrations/zynthian/: CMakeLists.txt  README.md
integrations/zynthian/include/pi_fartbox/zynthian/: zynthian_adapter.hpp
integrations/zynthian/src/: zynthian_adapter.cpp
platform/linux/: CMakeLists.txt  README.md
platform/linux/include/pi_fartbox/platform/: linux_host.hpp
platform/linux/src/: linux_host.cpp
session-manager/: CMakeLists.txt  README.md
web/: README.md  index.html
(+16 files in other folders)
